--- a/Dissertation/part_theory.tex
+++ b/Dissertation/part_theory.tex
@@ -10,7 +10,8 @@
 Основными из них являются понятия \textit{состояние программы}, \textit{достижимости} и \textit{абстракции}.
 Описанию этих и других необходимых понятий посвящена данная секция.
 
-Будем рассматривать простой императивный язык программирования, в котором поддерживаются операторы присваивания (assignment), проверки условия (assumption), захват и освобождение примитивов синхронизации (acquire/release) и создание потоков (thread\_create)\footnote{Реализация основана на инструменте \cpachecker, который работает с программами на языке Си}.
+Будем рассматривать простой императивный язык программирования, в котором поддерживаются операторы присваивания (assignment), проверки условия (assumption), захват и освобождение примитивов синхронизации (acquire/release) и создание потоков (thread\_create).
+%\footnote{Реализация основана на инструменте \cpachecker, который работает с программами на языке Си}.
 
 Параллельная программа представляется автоматом потока управления (англ. Control Flow Automaton, CFA), который состоит из множества вершин $L$  и множества соединяющих их ребер $G$ .
 Множество $L$ -- это множество всех точек программы (англ. program location), множество $G \subseteq L \times Ops \times L$, где $Ops$ -- это множество всех операций программы.
