--- a/common/concl.tex
+++ b/common/concl.tex
@@ -2,13 +2,19 @@
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 
+%\begin{enumerate}
+%  \item Был разработан общий алгоритм анализа, позволяющий объединить в себе как классический алгоритм CPA, так и алгоритм с раздельным анализом потоков;
+%  \item Была доказана теорема, позволяющая гарантировать корректность работы алгоритма;
+%  \item На основе общего алгоритма был разработан алгоритм с раздельным анализом потоков;
+%  \item Был разработан метод поиска состояний гонки, базирующийся на подходе с раздельным анализом потоков;
+%  \item Была доказана корректность предложенного метода поиска состояний гонки, который позволяет гибко балансировать точность и скорость анализа;
+%  \item Были проведены эксперименты, которые показали высокую степень гибкости разработанного метода.
+%\end{enumerate}
+
 \begin{enumerate}
-  \item Был разработан общий алгоритм анализа, позволяющий объединить в себе как классический алгоритм CPA, так и алгоритм с раздельным анализом потоков;
-  \item Была доказана теорема, позволяющая гарантировать корректность работы алгоритма;
-  \item На основе общего алгоритма был разработан алгоритм с раздельным анализом потоков;
-  \item Был разработан метод поиска состояний гонки, базирующийся на подходе с раздельным анализом потоков;
-  \item Была доказана корректность предложенного метода поиска состояний гонки, который позволяет гибко балансировать точность и скорость анализа;
-  \item Были проведены эксперименты, которые показали высокую степень гибкости разработанного метода.
+  \item Был разработан обобщенный алгоритм анализа программ, позволяющий использовать различные виды анализа, и доказана его корректность.
+  \item Был разработан алгоритм, позволяющий проводить раздельный анализ потоков многопоточных программ, и доказана его корректность.
+  \item Был разработан метод поиска состояний гонки в многопоточных программах.
 \end{enumerate}
 
 Эксперименты показали преимущества подхода на больших верификационных задачах перед существующими техниками статической верификации.
