--- a/common/data.tex
+++ b/common/data.tex
@@ -46,9 +46,9 @@
 \newcommand{\opponentOneFio}           % Оппонент 1, ФИО
 {\todo{Фамилия Имя Отчество}}
 \newcommand{\opponentOneRegalia}       % Оппонент 1, регалии
-{\todo{доктор физико-математических наук, профессор}}
+{\todo{доктор физ.-мат. наук, профессор}}
 \newcommand{\opponentOneJobPlace}      % Оппонент 1, место работы
-{\todo{Не очень длинное название для места работы}}
+{\todo{Место работы}}
 \newcommand{\opponentOneJobPost}       % Оппонент 1, должность
 {\todo{старший научный сотрудник}}
 
@@ -57,33 +57,33 @@
 \newcommand{\opponentTwoRegalia}       % Оппонент 2, регалии
 {\todo{кандидат физико-математических наук}}
 \newcommand{\opponentTwoJobPlace}      % Оппонент 2, место работы
-{\todo{Основное место работы c длинным длинным длинным длинным названием}}
+{\todo{Основное место работы}}
 \newcommand{\opponentTwoJobPost}       % Оппонент 2, должность
 {\todo{старший научный сотрудник}}
 
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки
-{\todo{Федеральное государственное бюджетное образовательное учреждение высшего профессионального образования с~длинным длинным длинным длинным названием}}
+{\todo{Федеральное государственное бюджетное образовательное учреждение высшего профессионального образования ...}}
 
 \newcommand{\defenseDate}              % Защита, дата
-{\todo{DD mmmmmmmm YYYY~г.~в~XX часов}}
+{\todo{DD} мая 2020~г.~в~\todo{XX} часов}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
-{\todo{Д\,123.456.78}}
+{Д\,002.087.01}
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
-{\todo{Название учреждения}}
+{Федеральном государственном бюджетном учреждении науки Институте системного программирования им. В.П.Иванникова РАН}
 \newcommand{\defenseCouncilAddress}    % Защита, адрес учреждение диссертационного совета
-{\todo{Адрес}}
+{109004, г. Москва,ул. А. Солженицына, дом 25}
 \newcommand{\defenseCouncilPhone}      % Телефон для справок
 {\todo{+7~(0000)~00-00-00}}
 
 \newcommand{\defenseSecretaryFio}      % Секретарь диссертационного совета, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Зеленов С. В.}
 \newcommand{\defenseSecretaryRegalia}  % Секретарь диссертационного совета, регалии
-{\todo{д-р~физ.-мат. наук}}            % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
+{кандидат физ.-мат. наук}            % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
 
 \newcommand{\synopsisLibrary}          % Автореферат, название библиотеки
 {\todo{Название библиотеки}}
 \newcommand{\synopsisDate}             % Автореферат, дата рассылки
-{\todo{DD mmmmmmmm YYYY года}}
+{\todo{DD} марта 2020 года}
 
 % To avoid conflict with beamer class use \providecommand
 \providecommand{\keywords}%            % Ключевые слова для метаданных PDF диссертации и автореферата
