Updates in synopsis

--- a/Dissertation/part_evaluation.tex
+++ b/Dissertation/part_evaluation.tex
@@ -104,6 +104,9 @@
 Чтобы отличать различные базовые конфигурации инструмента, далее будем использовать обозначение \textit{\theory} для обозначения конфигурации инструмента для решения задачи достижимости, \textit{\theoryraces} -- для обозначения конфигурации инструмента с эффектами окружения для решения задачи поиска гонок, и \textit{\combatmode} -- для обозначения конфигурации инструмента, инвариантного к эффектам окружения, для решения задачи поиска гонок.
 Таким образом влияние части опций будет оценено на нескольких конфигурациях, а там, где это невозможно, будет указан тот вариант конфигурации инструмента, который поддерживает ту или иную опцию.
 
+В следующих разделах будут представлены экспериментальные результаты для оценки влияния той или иной опции. 
+После проведения всех экспериментов будут подведены итоги и сделаны выводы по результатам экспериментов.
+
 %Было реализовано две основные модификации анализа с раздельным рассмотрением потоков с эффектами окружения
 %\begin{enumerate}
 %\item $\mathbb{C_1}(\mathbb{L}, \mathbb{CS}, \mathbb{T}, \mathbb{S}, \mathbb{P})$ -- включает анализ потоков, ограниченный количеством создаваемых потоков;
