--- a/common/data.tex
+++ b/common/data.tex
@@ -53,19 +53,19 @@
 {\todo{старший научный сотрудник}}
 
 \newcommand{\opponentTwoFio}           % Оппонент 2, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Галатенко Алексей Владимирович}
 \newcommand{\opponentTwoRegalia}       % Оппонент 2, регалии
-{\todo{кандидат физико-математических наук}}
+{кандидат физико-математических наук}
 \newcommand{\opponentTwoJobPlace}      % Оппонент 2, место работы
 {\todo{Основное место работы}}
 \newcommand{\opponentTwoJobPost}       % Оппонент 2, должность
-{\todo{старший научный сотрудник}}
+{старший научный сотрудник}
 
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки
-{\todo{Федеральное государственное бюджетное образовательное учреждение высшего профессионального образования ...}}
+{Федеральное государственное учреждение Федеральный исследовательский центр Информатика и управление Российской академии наук}
 
 \newcommand{\defenseDate}              % Защита, дата
-{\todo{DD} мая 2020~г.~в~\todo{XX} часов}
+{4 июня 2020~г.~в~\todo{XX} часов}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
 {Д\,002.087.01}
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
@@ -83,7 +83,7 @@
 \newcommand{\synopsisLibrary}          % Автореферат, название библиотеки
 {\todo{Название библиотеки}}
 \newcommand{\synopsisDate}             % Автореферат, дата рассылки
-{\todo{DD} марта 2020 года}
+{\todo{DD} апреля 2020 года}
 
 % To avoid conflict with beamer class use \providecommand
 \providecommand{\keywords}%            % Ключевые слова для метаданных PDF диссертации и автореферата
