Final updates before dedline cancel

--- a/Dissertation/conclusion.tex
+++ b/Dissertation/conclusion.tex
@@ -12,9 +12,9 @@
 
 В заключение автор
 выражает благодарность и большую признательность научному руководителю
-Хорошилову~А.\:В и Мутилину~В.\:С за поддержку, помощь, обсуждение результатов и научное
+Хорошилову~А.\:В. и Мутилину~В.\:С. за поддержку, помощь, обсуждение результатов и научное
 руководство.
-Также автор благодарит Новикова~Е.\:М., Захарова~И.\:С и Щепеткова~И.\:В. за
+Также автор благодарит Новикова~Е.\:М., Захарова~И.\:С. и Щепеткова~И.\:В. за
 помощь в~работе и~обсуждение результатов.
 %  и авторов шаблона *Russian-Phd-LaTeX-Dissertation-Template* за помощь в оформлении диссертации.
-Автор также благодарит всех, кто сделал настоящую работу автора возможной.
+Автор также благодарит всех, кто сделал настоящую работу возможной.
