--- a/Dissertation/introduction.tex
+++ b/Dissertation/introduction.tex
@@ -3,6 +3,7 @@
 
 \newcommand{\actuality}{}
 \newcommand{\progress}{}
+\newcommand{\aimandtasks}{{\textbf\aimandtasksTXT}}
 \newcommand{\aim}{{\textbf\aimTXT}}
 \newcommand{\tasks}{\textbf{\tasksTXT}}
 \newcommand{\novelty}{\textbf{\noveltyTXT}}
