--- a/Dissertation/part_related_work.tex
+++ b/Dissertation/part_related_work.tex
@@ -296,10 +296,11 @@ DataCollider был применен к нескольким драйверам 
 
 Основные особенности методов динамического анализа заключаются в следующем:
 \begin{enumerate}
-\item Рассмотренные инструменты динамического анализа ориентированы, в основном, на пользовательские приложения. 
-Их успешное применение к системному программному обеспечению возможно при сужении класса рассматриваемых ошибок.
+\item Инструменты динамического анализа ориентированы, в основном, на пользовательские приложения. 
+%Их успешное применение к системному программному обеспечению возможно при сужении класса рассматриваемых ошибок.
 \item Вероятностный характер алгоритмов не позволяет гарантировать отсутствия ошибок.
 \item Масштабируемость зависит больше не от общего объема кода, а от числа точек инструментации, то есть того кода, в котором производится поиск состояний гонки. 
+
 %\item В случае системного программного обеспечения могут возникнуть определенные требования к оборудованию.
 %\item При проведении динамического анализа рассмотренными инструментами необходимы пользовательские воздействия, то есть процесс не является полностью автоматическим.
 \end{enumerate}
