--- a/Dissertation/part_theory.tex
+++ b/Dissertation/part_theory.tex
@@ -419,7 +419,7 @@ Cpa-оператор останова должен удовлетворять с
  }%repeat
 
 % Thin about the caption
- \caption{Algorithm $CPA(\mathbb{D}, e_0, \pi_0)$}
+ \caption{Алгоритм $CPA(\mathbb{D}, e_0, \pi_0)$}
  \label{cpata_algorithm_ps}
 \end{algorithm} 
  
@@ -740,9 +740,9 @@ Cpa-оператор $apply$ связан с cpa-оператором $transfer_
 %Таким образом, CPA удовлетворяют общим условиям.
 
 
-\subsection{Формальное описание ThreadModularCPA}
+\subsection{Алгоритм построения окружения потока в терминах CPA}
 
-Определим специальный CPA, который реализует логику отдельного анализа с раздельным рассмотрением потоков: $\mathbb{TM}=(D_{TM}, \Pi_{TM}, \tatarrow_{TM}, merge_{TM}, stop_{TM}, prec_{TM})$, который основан на внутреннем CPA $\mathbb{I}=(D_{I}, \Pi_{I}, \tatarrow_{I}, merge_{I}, stop_{I}, prec_{I}, compatible_{I},$ $\cdot|_p,$ $compose_I$).
+Определим специальный CPA, который реализует логику отдельного анализа с раздельным рассмотрением потоков, в частности алгоритм построения окружения потока: $\mathbb{TM}=(D_{TM}, \Pi_{TM}, \tatarrow_{TM}, merge_{TM}, stop_{TM}, prec_{TM})$, который основан на внутреннем CPA $\mathbb{I}=(D_{I}, \Pi_{I}, \tatarrow_{I}, merge_{I}, stop_{I}, prec_{I}, compatible_{I},$ $\cdot|_p,$ $compose_I$).
 
 \begin{enumerate}
 
@@ -1478,7 +1478,7 @@ t_m
 \item  $\Pi_{\mathscr{C}} = \Pi_{\Delta_1} \times \dots \times \Pi_{\Delta_n}$
 
 \item 
-Внутренние элементы $\Delta$ работают с графом потока управления, с двумя дополнительными операциями:~\footnote{Заметим, что в реализации \cpachecker уже присутствуют две дуги в ГПУ для каждого вызова функции: function summary и function entry. Поэтому вызов функции $thread\_create$ не требует изменений в ГПУ с точки зрения реализации.}
+Внутренние элементы $\Delta$ работают с графом потока управления, с двумя дополнительными операциями:~\footnote{Заметим, что в реализации CPAchecker уже присутствуют две дуги в ГПУ для каждого вызова функции: function summary и function entry. Поэтому вызов функции $thread\_create$ не требует изменений в ГПУ с точки зрения реализации.}
 \begin{enumerate}
 \item $tc_{parent}$ представляет действие $thread\_create$ в родительском потоке, а
 \item $tc_{child}$ представляет действие $thread\_create$ в дочернем потоке.
@@ -2735,6 +2735,17 @@ t_n
 Программа, для которой получено множество достижимых абстрактных состояний $R$, содержит \textbf{состояние гонки}, если $\exists e_1, e_2 \in R$, $e_i=(s_i,q_i)$, $q_1, q_2 \in G$, $compatible(e_1, e_2)$ и операции $g_1, g_2$ выполняются над одной и той же глобальной переменной $x \in X^{global}$ и хотя бы одна операция является присваиванием (то есть $assign(x, expr)$).
 \end{defn}
 
+Определение~\ref{raceDef_abstract} является ключевым в данном методе. 
+Именно оно определяет, какие именно состояния будут трактоваться, как ошибочные.
+Особенное внимание следует обратить на использование оператора compatible, который изначально появился при описании алгоритма построения окружения.
+Этот оператор позволяет накладывать дополнительные ограничения на рассматриваемые пары абстрактных переходов, что повышает точность анализа.
+
+Итак, метод поиска состояний гонки состоит из двух основных частей.
+
+\begin{itemize}
+\item Построение множества достижимых состояний с использованием подхода с раздельным анализом потоков.
+\item Поиск таких пар абстрактных переходов, которые удовлетворяют определению~\ref{raceDef_abstract}.
+\end{itemize}
 
 %\newpage
 %============================================================================================================================
