--- a/Dissertation/title.tex
+++ b/Dissertation/title.tex
@@ -2,7 +2,9 @@
 \thispagestyle{empty}%
 \begin{center}%
 Федеральное государственное бюджетное учреждение науки
-Институт системного программирования им. В.П. Иванникова \\ Российской академии наук
+Институт системного программирования им. В.П. Иванникова \\ Российской академии наук \\
+\vspace{1mm}
+Федеральное государственное автономное образовательное учреждение высшего образования\\ <<Московский физико-технический институт \\ (национальный исследовательский университет)>>
 \end{center}%
 %
 \vspace{0pt plus4fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
