--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -37,7 +37,7 @@
 %Основной сложностью таких алгоритмов является обеспечение синхронизации между потоками и корректным использованием разделяемых ресурсов.
 %В связи с этим появляются новые типы ошибок, характерные только для параллельно исполняемого кода. 
 
-В дополнении к ошибкам, которые встречаются во всех видах программного обеспечения, многопоточные программы могут содержать специфические ошибки, связанные с параллельным выполнением: например, состояния взаимной блокировки и состояния <<гонки>>.
+В дополнение к ошибкам, которые встречаются во всех видах программного обеспечения, многопоточные программы могут содержать специфические ошибки, связанные с параллельным выполнением: например, состояния взаимной блокировки и состояния <<гонки>>.
 В общем случае состоянием гонки называют ситуацию, при которой поведение программы зависит от порядка или времени выполнения некоторых неконтролируемых событий.
 Важное уточнение заключается в том, что такое выполнение не всегда является ошибкой.
 Проблемы возникают тогда, когда разработчик не предусматривает некоторое из возможных поведений программы.
@@ -60,9 +60,9 @@
 Такие ошибки, связанные с параллельным исполнением кода, искать и исправлять гораздо сложнее, чем ошибки в последовательном коде, так как необходимо анализировать все возможные сценарии взаимодействия потоков.
 Кроме того, поиск и исправление таких ошибок осложняется случайным характером их проявлений, ошибка может проявляться очень редко.
 Это связано с тем, что для проявления ошибки необходимы некоторая конкретная последовательность и порядок действий различных потоков. 
-В системном программном обеспечении могут использоваться не только обыкновенные примитивы синхронизации, но и специальные низкоуровневые, например, запреты прерываний и планирования. 
+В системном программном обеспечении могут использоваться не только обыкновенные примитивы синхронизации, но и специальные низкоуровневые, например, запреты прерываний. 
 Таким образом, обнаружить ошибку, связанную с некорректной синхронизацией потоков, вручную практически невозможно, поэтому для их поиска используются различные автоматизированные подходы.
-Кроме этого, для анализа системного программного обеспечения, например, операционных систем, требутся специализированные инструменты, которые будут учитывать их особенности.
+Кроме этого, для анализа системного программного обеспечения, например, операционных систем, требуются специализированные инструменты, которые будут учитывать их особенности.
 
 Обычно выделяют два класса подходов к анализу программ: статические, которые проводят анализ исходного кода программы, и динамические, которые анализируют поведение программы в процессе ее выполнения.
 Каждый имеет свои достоинства и недостатки, например, методы динамического анализа обычно характеризуются высоким уровнем истинных предупреждений, в то время как статические методы позволяют покрыть больший объем кода.
@@ -73,7 +73,7 @@
 В случае же системного программного обеспечения цена пропущенной ошибки может быть слишком велика.
 Кроме того, некоторые сценарии поведения программы слишком сложно воспроизвести при реальном выполнении.
 Устройство системного программного обеспечения отличается от прикладных программ, что затрудняет анализ, так как далеко не все методы принимают во внимание специфику системного программного обеспечения.
-Поэтому применение только динамического анализу становится недостаточным, и в дополнение к ним применяются методы статической верификации.
+Поэтому применения только динамического анализа недостаточно, необходимо применять и методы статического анализа.
 
 Методы статической верификации способны обеспечить доказательство отсутствия ошибок в некоторых заранее заданных предположениях, но при этом традиционно испытывают сложности при масштабировании на большие объемы исходного кода.
 Тем не менее, такие методы показывают высокую точность, что является важной особенностью при анализе такого программного обеспечения, к которому предъявляются высокие требования качества.
@@ -121,34 +121,38 @@
 % темы. Нужен он отдельным структурынм элемементом или нет ---
 % смотрите другие диссертации вашего совета, скорее всего не нужен.
 
-{\aim} данной работы является разработка метода поиска состояний гонок, который будет масштабироваться на большие объемы кода, будет обладать приемлемым уровнем ложных предупреждений и будет учитывать специфику ядра операционных систем.
+{\aimandtasks} Целью данной работы является разработка метода поиска состояний гонок, который будет масштабироваться на большие объемы кода, будет обладать приемлемым уровнем ложных предупреждений и будет учитывать специфику ядра операционных систем.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
-  \item Разработать общий алгоритм, позволяющий реализовать подход к верификации программного обеспечения с раздельным анализом потоков, и доказать его корректность;
-  \item Разработать метод поиска состояний гонки, как частный случай общего алгоритма, который может эффективно применяться к большим объемам исходного кода, и доказать его корректность;
-  \item Реализовать разработанные алгоритмы;
-  \item Провести эксперименты и сравнить результаты с другими инструментами статической верификации;
+  \item Разработать метод поиска состояний гонки, на основе подхода с раздельным анализом потоков.
+  \item Разработать алгоритм построения окружения потока, который будет обладать конфигурируемостью и масштабироваться на большие объемы исходного кода, и доказать его корректность.
+  \item Модернизировать алгоритм адаптивного статического анализа (англ. Configurable Program Analysis, CPA) с целью обеспечения возможности выполнять верификацию программого обеспчения с раздельным анализом потоков и доказать его корректность.
+  \item Реализовать разработанные алгоритмы.
+  \item Провести эксперименты и сравнить результаты с другими инструментами статической верификации.
 \end{enumerate}
 
 {\novelty}
 \begin{enumerate}
-  \item Был предложен новый алгоритм, который является обобщением существующего алгоритма CPA, и доказана его корректность;
-  \item Был предложен частный случай обобщенного алгоритма, который реализует подход с раздельным анализом потоков, и доказана его корректность;
-  \item Разработан метод поиска состояний гонки и доказана его корректность;
+  \item Метод поиска состояний гонки на основе раздельного анализа потоков, использующий средства абстракции состояний и переходов для управления точностью и ресурсоемкостью верификации.
+  \item Алгоритм построения окружения потока, который позволяет гибко настраивать уровень абстракции над взаимодействием потоков, и доказательство его корректности.
+  \item Новый алгоритм, который является обобщением существующего алгоритма cтатической верификации программ при помощи метода CPA, расширяющий типовой набор CPA-анализаторов средствами верификации многопоточных программ с раздельным анализом потоков, и доказательство его корректности.
   %\item Были проведены запуски инструмента на модулях ядра операционной системы Linux, а также на двух операционных системах реального времени;
 \end{enumerate}
 
-%{\influence} \ldots
+{\influence} Развитие метода адаптивного статического анализа для обеспечения возможности его использования вместе с подходом раздельного анализа потоков является важным теоретичеким вкладом в развитие программной инженерии.
+Разработка нового алгоритма построения окружения потока является важным развитием подхода с раздельным анализом потоков для обеспечения возможности применения к большому объему исходного кода.
+Практическим результатом данного исследования является множество найденных ошибок как в операционных системах реального времени, так и в драйверах устройств операционной системы Linux.
 
-%{\methods} \ldots
+{\methods} При проведении работы были использованы как теоретические методы исследования (анализ, формализация, абстрагирование), так и практические (эксперименты, сравнение).
 
-%{\defpositions}
-\textbf{Положения, выносимые на публичное представление}
+{\defpositions}
+%\textbf{Положения, выносимые на публичное представление}
 \begin{enumerate}
-  \item Обобщенный алгоритм анализа программ, позволяющий использовать различные виды анализа, и доказательство его корректности;
-  \item Алгоритм, позволяющий проводить раздельный анализ потоков многопоточных программ, и доказательство его корректности;
-  \item Метод поиска состояний гонки в многопоточных программах.
+\item Метод поиска состояний гонки на основе раздельного анализа потоков, использующий средства абстракции состояний и переходов для управления точностью и ресурсоемкостью верификации. 
+\item Алгоритм построения окружения потока и верификации многопоточных программ с помощью подхода с раздельным анализом потоков и доказательство его корректности.
+\item Обобщение алгоритма статической верификации программ при помощи
+метода CPA, расширяющий типовой набор CPA-анализаторов средствами верификации многопоточных программ с раздельным анализом потоков, и доказательство его корректности.
 \end{enumerate}
 
 %{\reliability} полученных результатов обеспечивается \ldots \ Результаты находятся в соответствии с результатами, полученными другими авторами.
@@ -171,8 +175,6 @@
   \item Семинар <<Математические вопросы информатики>> Мехмат МГУ, Москва, Россия, 2019 г.
 \end{itemize}
 
-% {\contribution} Автор принимал активное участие \ldots
-
 \publications\ Основные результаты по теме диссертации изложены в 6 печатных изданиях~\cite{lockatorVAK,lockatorVAK2,TMPA2017,theoryVAK,lockatorSyrcose,lockatorTMPA}, 
     4 из которых изданы в журналах, рекомендованных ВАК~\cite{lockatorVAK,lockatorVAK2,TMPA2017,theoryVAK}, из них 1 находится в базе Scopus~\cite{TMPA2017},
     2 "--- в тезисах докладов~\cite{lockatorSyrcose,lockatorTMPA}.
@@ -183,3 +185,4 @@
 В статье~\cite{lockatorSyrcose} автором написаны разделы, в которых описывается ключевые особенности метода (главы 3--5).
 В статье~\cite{lockatorTMPA} автором написаны разделы, посвященные разработанному методу (главы 3--5).
 
+{\contribution} Все представленные в диссертации результаты получены лично автором.
