--- a/common/concl.tex
+++ b/common/concl.tex
@@ -12,9 +12,10 @@
 %\end{enumerate}
 
 \begin{enumerate}
-  \item Был разработан обобщенный алгоритм анализа программ, позволяющий использовать различные виды анализа, и доказана его корректность.
-  \item Был разработан алгоритм, позволяющий проводить раздельный анализ потоков многопоточных программ, и доказана его корректность.
-  \item Был разработан метод поиска состояний гонки в многопоточных программах.
+  \item Был разработан метод поиска состояний гонки на основе раздельного анализа потоков, использующий средства абстракции состояний и переходов для управления точностью и ресурсоемкостью верификации.
+  \item Был разработан алгоритм построения окружения потока, который позволяет гибко настраивать уровень абстракции над взаимодействием потоков, и доказана его корректность.
+  \item Был разработан новый алгоритм, который является обобщением существующего алгоритма cтатической верификации программ при помощи метода CPA, расширяющий типовой набор CPA-анализаторов средствами верификации многопоточных программ с раздельным анализом потоков, и доказана его корректность.
+  %\item Были проведены запуски инструмента на модулях ядра операционной системы Linux, а также на двух операционных системах реального времени;
 \end{enumerate}
 
 Эксперименты показали преимущества подхода на больших верификационных задачах перед существующими техниками статической верификации.
