--- a/common/data.tex
+++ b/common/data.tex
@@ -44,28 +44,28 @@
 
 
 \newcommand{\opponentOneFio}           % Оппонент 1, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Галатенко Владимир Антонович}
 \newcommand{\opponentOneRegalia}       % Оппонент 1, регалии
-{\todo{доктор физ.-мат. наук, профессор}}
+{доктор физ.-мат. наук, старший научный сотрудник}
 \newcommand{\opponentOneJobPlace}      % Оппонент 1, место работы
-{\todo{Место работы}}
+{Федеральное государственное учреждение ``Федеральный научный центр Научно-исследовательский институт системных исследований РАН''}
 \newcommand{\opponentOneJobPost}       % Оппонент 1, должность
-{\todo{старший научный сотрудник}}
+{заведующий сектором}
 
 \newcommand{\opponentTwoFio}           % Оппонент 2, ФИО
-{Галатенко Алексей Владимирович}
+{Романенко Сергей Анатольевич}
 \newcommand{\opponentTwoRegalia}       % Оппонент 2, регалии
 {кандидат физико-математических наук}
 \newcommand{\opponentTwoJobPlace}      % Оппонент 2, место работы
-{\todo{Основное место работы}}
+{Федеральное государственное учреждение ``Федеральный исследовательский центр Институт прикладной математики им. М.В. Келдыша РАН''}
 \newcommand{\opponentTwoJobPost}       % Оппонент 2, должность
-{старший научный сотрудник}
+{ведущий научный сотрудник}
 
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки
 {Федеральное государственное учреждение Федеральный исследовательский центр Информатика и управление Российской академии наук}
 
 \newcommand{\defenseDate}              % Защита, дата
-{4 июня 2020~г.~в~\todo{XX} часов}
+{18 июня 2020~г.~в~15 часов}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
 {Д\,002.087.01}
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
@@ -83,7 +83,7 @@
 \newcommand{\synopsisLibrary}          % Автореферат, название библиотеки
 {\todo{Название библиотеки}}
 \newcommand{\synopsisDate}             % Автореферат, дата рассылки
-{\todo{DD} апреля 2020 года}
+{\underline{\hspace{2cm}} 2020 года}
 
 % To avoid conflict with beamer class use \providecommand
 \providecommand{\keywords}%            % Ключевые слова для метаданных PDF диссертации и автореферата
