--- a/common/newnames.tex
+++ b/common/newnames.tex
@@ -4,27 +4,28 @@
 % 9.2.1 Общая характеристика работы включает в себя следующие основные структурные
 % элементы:
 % актуальность темы исследования;
-\newcommand{\actualityTXT}{Актуальность темы.}
+\newcommand{\actualityTXT}{Актуальность темы исследования.}
 % степень ее разработанности;
 \newcommand{\progressTXT}{Степень разработанности темы.}
 % цели и задачи;
+\newcommand{\aimandtasksTXT}{Цели и задачи.}
 \newcommand{\aimTXT}{Целью}
 \newcommand{\tasksTXT}{задачи}
 % научную новизну;
 \newcommand{\noveltyTXT}{Научная новизна:}
 % теоретическую и практическую значимость работы;
-%\newcommand{\influenceTXT}{Теоретическая и практическая значимость}
+\newcommand{\influenceTXT}{Теоретическая и практическая значимость работы.}
 % или чаще используют просто
-\newcommand{\influenceTXT}{Практическая значимость}
+%\newcommand{\influenceTXT}{Практическая значимость}
 % методологию и методы исследования;
 \newcommand{\methodsTXT}{Mетодология и методы исследования.}
 % положения, выносимые на защиту;
-\newcommand{\defpositionsTXT}{Основные положения, выносимые на~защиту:}
+\newcommand{\defpositionsTXT}{Положения, выносимые на~защиту:}
 % степень достоверности и апробацию результатов.
 \newcommand{\reliabilityTXT}{Достоверность}
-\newcommand{\probationTXT}{Апробация работы.}
+\newcommand{\probationTXT}{Апробация результатов.}
 
-\newcommand{\contributionTXT}{Личный вклад.}
+\newcommand{\contributionTXT}{Личный вклад автора.}
 \newcommand{\publicationsTXT}{Публикации.}
 
 
