--- a/common/renames.tex
+++ b/common/renames.tex
@@ -2,6 +2,7 @@
 \renewcommand{\contentsname}{Оглавление} % (ГОСТ Р 7.0.11-2011, 4)
 \renewcommand{\figurename}{Рисунок} % (ГОСТ Р 7.0.11-2011, 5.3.9)
 \renewcommand{\tablename}{Таблица} % (ГОСТ Р 7.0.11-2011, 5.3.10)
+%\renewcommand{\algorithmname}{Алгоритм}
 \renewcommand{\listfigurename}{Список рисунков}
 \renewcommand{\listtablename}{Список таблиц}
 \renewcommand{\bibname}{\fullbibtitle}
